<resources>
    <string name="app_name">Diário De Bolso</string>
    <string name="user">Nome de Utilizador</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="createAcc">Cadastre-se</string>

    <string name="newEntry">Nova Entrada</string>

    <string name="dateTime">Data e hora</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="location">Localização</string>
    <string name="edit">Editar</string>
    <string name="delete">Remover</string>

    <string name="preview">Prévia da Imagem</string>
    <string name="addLocation">Adicionar Localização</string>
    <string name="save">Salvar</string>
    <string name="addPhoto">Adicionar Foto</string>
    <string name="select_date">Selecionar Data</string>
    <string name="date">Data</string>
    <string name="viewMore">Ver mais</string>

    <string name="empty_list_message">Ainda não tem nenhuma entrada.\nClique no \'+\' para começar!</string>
</resources>